--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "react-native-dropdown-picker",
   "version": "1.0.1",
   "description": "A picker (dropdown) for react native which supports both Android & iOS.",
-  "types": "index.d.ts",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hossein-zare/react-native-dropdown-picker.git"
