--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "keywords": [
     "picker",
     "dropdown",
+    "drop-down",
     "menu",
+    "context",
     "component",
     "react",
     "reactnative",
+    "react-native",
+    "react native",
     "android",
     "ios",
     "javascript"
