--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-dropdown-picker",
-  "version": "2.1.8",
-  "description": "A picker (dropdown) for react native which supports both Android & iOS.",
+  "version": "3.0.0",
+  "description": "A multiple / single, searchable item picker (dropdown) component for react native which supports both Android & iOS.",
   "main": "src/index.js",
   "repository": {
     "type": "git",
