--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-dropdown-picker",
   "version": "3.0.0",
-  "description": "A multiple / single, searchable item picker (dropdown) component for react native which supports both Android & iOS.",
+  "description": "A single or multiple, searchable item picker (dropdown) component for react native which supports both Android & iOS.",
   "main": "src/index.js",
   "repository": {
     "type": "git",
@@ -11,6 +11,10 @@
     "picker",
     "dropdown",
     "drop-down",
+    "multiple",
+    "single",
+    "placeholder",
+    "searchable",
     "menu",
     "context",
     "component",
