--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.5",
   "description": "A single or multiple, searchable item picker (dropdown) component for react native which supports both Android & iOS.",
   "main": "src/index.js",
+  "types": "index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hossein-zare/react-native-dropdown-picker.git"
