--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "javascript"
   ],
   "dependencies": {
-    "react-native-vector-icons": "^7.0.0",
-    "prop-types": "^15.7.2"
+    "react-native-vector-icons": "^7.0.0"
   },
   "author": "Hossein Zare",
   "license": "MIT",
