--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-dropdown-picker",
   "version": "3.7.5",
-  "description": "A single or multiple, searchable item picker (dropdown) component for react native which supports both Android & iOS.",
+  "description": "A single / multiple, searchable item picker (dropdown) component for react native which supports both Android & iOS.",
   "main": "src/index.js",
   "types": "index.d.ts",
   "repository": {
