--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-dropdown-picker",
-  "version": "3.8.3",
-  "description": "A single / multiple, searchable item picker (dropdown) component for react native which supports both Android & iOS.",
+  "version": "4.0.0",
+  "description": "A single / multiple, categorizable & searchable item picker (dropdown) component for react native which supports both Android & iOS.",
   "main": "src/index.js",
   "types": "index.d.ts",
   "repository": {
@@ -15,7 +15,10 @@
     "multiple",
     "single",
     "placeholder",
+    "categorizable",
+    "category",
     "searchable",
+    "sub-item",
     "menu",
     "context",
     "component",
