--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-  "name": "react-native-dropdown-picker",
-  "version": "5.0.0",
-  "description": "A single / multiple, categorizable & searchable item picker (dropdown) component for react native which supports both Android & iOS.",
-  "main": "src/index.js",
-  "types": "index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hossein-zare/react-native-dropdown-picker.git"
-  },
-  "keywords": [
-    "picker",
-    "dropdown",
-    "drop-down",
-    "multiple",
-    "single",
-    "placeholder",
-    "categorizable",
-    "category",
-    "searchable",
-    "sub-item",
-    "menu",
-    "context",
-    "component",
-    "rtl",
-    "rtl-support",
-    "react",
-    "reactnative",
-    "react-native",
-    "react native",
-    "android",
-    "ios",
-    "javascript"
-  ],
-  "author": "Hossein Zare",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/hossein-zare/react-native-dropdown-picker/issues"
-  },
-  "homepage": "https://github.com/hossein-zare/react-native-dropdown-picker#readme"
-}
+    "name": "react-native-dropdown-picker",
+    "version": "5.0.0",
+    "description": "A single / multiple, categorizable & searchable item picker (dropdown) component for react native which supports both Android & iOS.",
+    "main": "index.js",
+    "types": "index.d.ts",
+    "repository": {
+      "type": "git",
+      "url": "git+https://github.com/hossein-zare/react-native-dropdown-picker.git"
+    },
+    "keywords": [
+      "picker",
+      "dropdown",
+      "drop-down",
+      "multiple",
+      "single",
+      "placeholder",
+      "categorizable",
+      "category",
+      "searchable",
+      "sub-item",
+      "menu",
+      "context",
+      "component",
+      "rtl",
+      "rtl-support",
+      "react",
+      "reactnative",
+      "react-native",
+      "react native",
+      "android",
+      "ios",
+      "javascript"
+    ],
+    "author": "Hossein Zare",
+    "license": "MIT",
+    "bugs": {
+      "url": "https://github.com/hossein-zare/react-native-dropdown-picker/issues"
+    },
+    "homepage": "https://github.com/hossein-zare/react-native-dropdown-picker#readme"
+  }
