--- a/package.json
+++ b/package.json
@@ -49,6 +49,13 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.5",
-    "@types/react-native": "^0.64.4"
+    "@types/react-native": "^0.64.4",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "eslint": "^7.25.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-native": "^3.10.0",
+    "typescript": "^4.2.4"
   }
 }
