--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,19 +5,19 @@ on:
     branches:
       - 5.x
 jobs:
-  install-and-test:
+  publish-npm:
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - uses: actions/checkout@v2
-      - name: Install npm dependencies
-        run: |
-          npm install
-      - name: Run tests
-        run: |
-          npm test
-      - run: npm publish --access public
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci
+      - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_ACCESS_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+
   # build-android:
   #   needs: install-and-test
   #   runs-on: ubuntu-latest
