--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
   "main": "index.js",
   "types": "index.d.ts",
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-native": "^0.64.1"
+    "react": "*",
+    "react-native": "*"
   },
   "devDependencies": {
     "@types/react": "^17.0.5",
