--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: deepakputhraya/action-pr-title@master
         with:
-          regex: "\bbeta\b"
+          regex: ".+\.(beta)\..+"
       # - id: get_version
       #   run:  echo "::set-output name=version::`echo "${{ github.event.pull_request.title }}" | sed -n 's/#beta:\s\{0,1\}\(.*\),.*/\1/p'`"
       - name: 'Change version'
