--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   publish-npm:
-    if: github.event.pull_request.merged == true && github.event.pull_request.title
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - uses: deepakputhraya/action-pr-title@master
