--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-dropdown-picker",
-  "version": "5.4.6",
+  "version": "5.4.7",
   "description": "A single / multiple, categorizable, customizable, localizable and searchable item picker (drop-down) component for react native which supports both Android & iOS.",
   "keywords": [
     "picker",
@@ -43,7 +43,9 @@
   "author": "Hossein Zare",
   "main": "index.js",
   "types": "index.d.ts",
-  "dependencies": {},
+  "dependencies": {
+    "react-native-gesture-handler": "^2.9.0"
+  },
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
