--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "main": "index.js",
   "types": "index.d.ts",
   "dependencies": {
-    "react-native-gesture-handler": "*"
+    "react-native-gesture-handler": "^2.12.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.16",
@@ -67,7 +67,7 @@
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
+    "react": "^18.2.0",
+    "react-native": "^0.72.4"
   }
 }
