--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,12 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  run-eslint:
-    name: Lint source files with ESLint
+  # TODO: check project builds/compiles correctly, maybe with tsc TypeScript compiler?
+
+  # TODO: add tests including coverage
+
+  lint_files:
+    name: Lint source files
     runs-on: ubuntu-latest
 
     steps:
@@ -15,7 +19,15 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
-      - name: Run ESLint
+      - name: Lint source files with Prettier
+        run: >
+          npx prettier --check
+          .
+          --config
+          .prettierrc.yaml
+          --ignore-path
+          .prettierignore
+      - name: Lint source files with ESLint
         run: >
           npx eslint
           .
@@ -24,8 +36,8 @@ jobs:
           --ignore-path
           .eslintignore
 
-  run-prettier:
-    name: Lint source files with Prettier
+  check-npm-dependencies:
+    name: Check npm dependencies
     runs-on: ubuntu-latest
 
     steps:
@@ -34,59 +46,43 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
-      - run: >
-          npx prettier --check
-          .
-          --config
-          .prettierrc.yaml
-          --ignore-path
-          .prettierignore
-
-  run-npm-audit:
-    name: Scan for known vulnerabilities in dependencies with npm audit
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: npm ci
-      - run: >
+      - name: Scan for known vulnerabilities in dependencies with npm audit
+        run: >
           npm audit
           --audit-level
           critical
-
-  run-npm-depcheck:
-    name: Check for unused and missing dependencies with depcheck
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: npm ci
-      - run: >
+      - name: Check for unused and missing dependencies with depcheck
+        run: >
           npx depcheck
           --ignores
           typescript,prettier
+      - name: Check for outdated packages with npm outdated
+        run: npm outdated
+      - name: Check for outdated packages with npm-check-updates
+        run: npx npm-check-updates
 
-  run-npm-outdated:
-    name: Check for outdated packages with npm outdated and npm-check-updates
+  find_todos:
+    name: Search for TODOs etc
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: npm ci
-      - run: npm outdated
-      - run: npx npm-check-updates
+      - name: Search for TODO, FIXME, and BUG statements in source files
+        run: >
+          if grep
+          --recursive
+          --extended-regexp
+          --with-filename
+          --line-number
+          --color=always
+          "TODO|FIXME|BUG"
+          ./src;
+          then exit 1;
+          else
+          echo "No TODO, FIXME, or BUG statements found in source files.";
+          fi
 
   typos_spell_check:
-    name: Spell Check with Typos
+    name: Check spelling with typos
     runs-on: ubuntu-latest
 
     steps:
@@ -96,15 +92,25 @@ jobs:
         with:
           config: .typos.toml
 
-  commitlint:
-    name: Check the commit conforms to the Conventional Commits specification with commitlint
+  lint_markdown_files:
+    name: Lint Markdown files
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-      - uses: wagoid/commitlint-github-action@v5
+      - uses: articulate/actions-markdownlint@v1
+        with:
+          files: '*.md'
+          ignore: '**/node_modules'
+
+  commitlint:
+    name: Enforce Conventional Commits
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Check the commits conform to the Conventional Commits specification with commitlint
+        uses: wagoid/commitlint-github-action@v5
 
 # TODO: check commits squashed into one (i.e. all changes in a PR are in one commit after last one in primary branch)
 # TODO: use release-please to increment version number, update changelog, and publish releases automatically if CI passes
-# TODO: check project builds/compiles correctly
-# TODO: add tests including coverage
