--- a/examples/package.json
+++ b/examples/package.json
@@ -1,24 +1,24 @@
 {
   "name": "examples",
   "version": "1.0.0",
+  "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "start": "expo start",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.9",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^49.0.13",
+    "expo-status-bar": "~1.7.1",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-dropdown-picker": "^5.4.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.15",
-    "@types/react": "~18.2.21",
+    "@babel/core": "^7.23.0",
+    "@types/react": "~18.2.24",
     "typescript": "^5.2.2"
-  },
-  "private": true
+  }
 }
