--- a/package.json
+++ b/package.json
@@ -44,20 +44,20 @@
   "main": "index.js",
   "types": "index.d.ts",
   "dependencies": {
-    "react-native-gesture-handler": "^2.12.1"
+    "react-native-gesture-handler": "~2.13.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.21",
-    "@types/react-native": "^0.72.2",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "eslint": "^8.49.0",
+    "@types/react": "^18.2.24",
+    "@types/react-native": "^0.72.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.50.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsdoc": "^46.5.1",
+    "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "7.33.2",
@@ -68,6 +68,6 @@
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-native": "^0.72.4"
+    "react-native": "^0.72.5"
   }
 }
