--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,15 +6,14 @@ on: [push, pull_request]
 
 jobs:
   # TODO: check project builds/compiles correctly, maybe with tsc TypeScript compiler?
-
   # TODO: add tests including coverage
 
-  lint_files:
+  lint_src_files:
     name: Lint source files
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -41,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -65,7 +64,7 @@ jobs:
     name: Search for TODOs etc
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Search for TODO, FIXME, and BUG statements in source files
         run: >
           if grep
@@ -84,9 +83,8 @@ jobs:
   typos_spell_check:
     name: Check spelling with typos
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Check spelling with typos
         uses: crate-ci/typos@master
         with:
@@ -95,22 +93,35 @@ jobs:
   lint_markdown_files:
     name: Lint Markdown files
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: articulate/actions-markdownlint@v1
         with:
           files: '*.md'
           ignore: '**/node_modules'
 
+  lint_yaml_files:
+    name: Lint YAML files
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ibiqlik/action-yamllint@v3
+
+  lint_shell_script_files:
+    name: Lint shell scripts
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: azohra/shell-linter@latest
+
   commitlint:
     name: Enforce Conventional Commits
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Check the commits conform to the Conventional Commits specification with commitlint
         uses: wagoid/commitlint-github-action@v5
 
 # TODO: check commits squashed into one (i.e. all changes in a PR are in one commit after last one in primary branch)
-# TODO: use release-please to increment version number, update changelog, and publish releases automatically if CI passes
+# TODO: use semver to increase version numbers and update changelog automatically
+# TODO: publish new release automatically if version increased and CI passes (use release-please?)
